# pearl-engine

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
assets/: map16x16.map  map3.map  terrain3.pyxel  test-terrain-2.pyxel  test-terrain-2.txt  testmap.map
assets/old things/: map24x24.map
docs/: CMakeLists.txt  ECS_ARCHITECTURE.md  USAGE_EXAMPLE.md  config.txt
include/PRL/: Animation.hpp  AssetManager.hpp  Camera.hpp  Collision.hpp  CollisionManager.hpp  Constants.hpp  Core.hpp  Defaults.hpp  Game.hpp  GameObject.hpp  Geometry.hpp  Logging.hpp  PRL.hpp  PhysicsManager.hpp  TextureManager.hpp  TileMap.hpp  Types.hpp  Utils.hpp  Vector2D.hpp  Vector2D.inl
include/PRL/ECS/: AnimationComponent.hpp  ButtonComponent.hpp  ColliderComponent.hpp  Components.hpp  ECS.hpp  ECSBasics.hpp  FadeComponent.hpp  HumanPlayerComponent.hpp  KeyboardController.hpp  PhysicsComponent.hpp  ProjectileComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TileMapComponent.hpp  TransformComponent.hpp  UILabel.hpp  VelocityComponent.hpp
include/PRL/Systems/: AnimationSystem.hpp  RenderSystem.hpp  Systems.hpp  TileMapSystem.hpp
src/: Animation.cpp  AssetManager.cpp  CMakeLists.txt  Collision.cpp  CollisionManager.cpp  Core.cpp  Game.cpp  Geometry.cpp  Logging.cpp  PhysicsManager.cpp  TextureManager.cpp  TileMap.cpp  Types.cpp  Vector2D.cpp  main.cpp
src-engine/: Animation.cpp  Collision.cpp  Collision.hpp  Game.cpp  Game.hpp  GameObject.cpp  TextureManager.cpp  TextureManager.hpp  TileMap.cpp  TileMap.hpp  Types.hpp  Vector2D.cpp  Vector2D.hpp
src-engine/ECS/: ColliderComponent.cpp  ColliderComponent.hpp  Components.hpp  ECS.cpp  ECS.hpp  KeyboardController.cpp  KeyboardController.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TileComponent.cpp  TileComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/ECS/: AnimationComponent.cpp  ButtonComponent.cpp  ColliderComponent.cpp  ECS.cpp  FadeComponent.cpp  HumanPlayerComponent.cpp  KeyboardController.cpp  PhysicsComponent.cpp  ProjectileComponent.cpp  SpriteComponent.cpp  TileComponent.cpp  TileMapComponent.cpp  TransformComponent.cpp  UILabel.cpp  VelocityComponent.cpp
src/Systems/: AnimationSystem.cpp  RenderSystem.cpp  Systems.cpp  TileMapSystem.cpp
tests/: CMakeLists.txt  geometry_test.cpp  main_test.cpp
